<resources>
    <string name="app_name">Dharmais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_utama">UtamaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Alur Pendaftaran</string>
    <string name="menu_slideshow">Cancer Immunotherapy</string>
    <string name="menu_cancer_wound_care">Cancer Wound Care</string>
    <string name="menu_deteksi_dini_kanker">Deteksi Dini Kanker</string>
    <string name="menu_diklit">DIKLIT</string>
    <string name="menu_farmasi">Farmasi</string>
    <string name="menu_hbcr_rsk_dharmasi">HBCR RSK Dharmais</string>
    <string name="menu_info_rksd">Info RSKD</string>
    <string name="menu_informasi_medis">Informasi Medis</string>
    <string name="menu_informasi_publik">Informasi Publik</string>
    <string name="menu_instalasi_pelayanan_eksekutif">Instalasi Pelayanan eksekutif</string>
    <string name="menu_keperawatan">Keperawatan</string>
    <string name="menu_kinerja">KINERJA</string>
    <string name="menu_layanan_perawatan_unggulan">Layanan Perawatan Unggulan</string>
    <string name="menu_litbang">Litbang</string>
    <string name="menu_microsurgery">Microsurgery</string>
    <string name="menu_palliative">Palliative</string>
    <string name="menu_pbcr_dki_jakarta">PBCR DKI Jakarta</string>
    <string name="menu_pbcr_jakarta_barat">PBCR Jakarta Barat</string>
    <string name="menu_pbcr_nasional">PBCR Nasional</string>
    <string name="menu_pelayanan">Pelayanan</string>
    <string name="menu_pelayanan_unggulan">Pelayanan Unggulan</string>
    <string name="menu_pendidikan">Pendidikan</string>
    <string name="menu_penelitian">Penelitian</string>
    <string name="menu_prinsip_dan_metode">Prinsip dan Metode</string>
    <string name="menu_rawat_inap">Rawat Inap</string>
    <string name="menu_srikandi">Srikandi</string>
    <string name="menu_stem_cell_transplation">Stem Cell Transplantation</string>
</resources>